--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -16,6 +16,7 @@
 
 body {
     font-family: sans-serif;
+    overflow:auto;
 }
 
 .portfolioBox {
